# Sships

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  Keys.hpp  Logger.cpp  Logger.hpp  Point.cpp  Point.hpp  Properties.cpp  Properties.hpp
api/games/: Game.cpp  Game.hpp  LocalMultiplayer.cpp  LocalMultiplayer.hpp  OnlineMultiplayer.cpp  OnlineMultiplayer.hpp
api/ships/: Ship.cpp  Ship.hpp
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
